--- a/Gen_Assignment_1.ipynb
+++ b/Gen_Assignment_1.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -74,8 +74,7 @@
         "print(\"\\nUsing Libraries:\")\n",
         "print(f\"Mean Absolute Error (MAE): {mae_lib}\")\n",
         "print(f\"Mean Squared Error (MSE): {mse_lib}\")\n",
-        "print(f\"Root Mean Squared Error (RMSE): {rmse_lib}\")\n",
-        ""
+        "print(f\"Root Mean Squared Error (RMSE): {rmse_lib}\")\n"
       ]
     },
     {
@@ -127,7 +126,7 @@
         "id": "mbOjhnxBaY8b",
         "outputId": "12d8e77a-1905-4239-9d67-0986705258a8"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
